--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,33 @@
-matplotlib
-numpy
-python-multipart
-aiofiles
+aiofiles==0.5.0
+albumentations==0.4.5
+certifi==2019.11.28
+classification-service==0.1.0
+click==7.1.1
+cycler==0.10.0
+decorator==4.4.2
+Flask==1.1.1
+imageio==2.8.0
+imgaug==0.2.6
+itsdangerous==1.1.0
+Jinja2==2.11.1
+kiwisolver==1.1.0
+-e git+https://github.com/DaloroAT/learn_docker_flask.git@751b7b2ea74980f70694a555badf444873a58889#egg=learn_docker_flask
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+networkx==2.4
+numpy==1.18.2
+opencv-python==4.2.0.32
+Pillow==7.0.0
+pyparsing==2.4.6
+python-dateutil==2.8.1
+python-multipart==0.0.5
+PyWavelets==1.1.1
+PyYAML==5.3.1
+redis==3.4.1
+scikit-image==0.16.2
+scipy==1.4.1
+six==1.14.0
+torch==1.4.0
+torchvision==0.5.0
+Werkzeug==1.0.0
+wincertstore==0.2
