--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,5 @@ six==1.15.0
 starlette==0.13.6
 uvicorn==0.12.0
 wincertstore==0.2
+git+git://github.com/DaloroAT/python_utils@master#egg=python_utils
+
